[gd_scene load_steps=5 format=2]

[ext_resource path="res://raw/tilesetter_tileset_godot/tileset_tilesetter_tileset_godot/tileset_tileset_tilesetter_tileset_godot.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/harvester.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game_ui.gd" type="Script" id=3]
[ext_resource path="res://scenes/fields.gd" type="Script" id=4]

[node name="fields" type="Node2D"]
script = ExtResource( 4 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="game_ui" type="Control" parent="canvas"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="margin_container" type="MarginContainer" parent="canvas/game_ui"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="labels_container" type="VBoxContainer" parent="canvas/game_ui/margin_container"]
margin_left = 16.0
margin_top = 16.0
margin_right = 151.0
margin_bottom = 84.0

[node name="harvester_health" type="Label" parent="canvas/game_ui/margin_container/labels_container"]
margin_right = 135.0
margin_bottom = 14.0
text = "HEALTH: 100"

[node name="harvester_crops_harvested" type="Label" parent="canvas/game_ui/margin_container/labels_container"]
margin_top = 18.0
margin_right = 135.0
margin_bottom = 32.0
text = "HARVESTED CROPS: 0"

[node name="harvester_crops_ruined" type="Label" parent="canvas/game_ui/margin_container/labels_container"]
margin_top = 36.0
margin_right = 135.0
margin_bottom = 50.0
text = "RUINED CROPS: 0"

[node name="harvester_time" type="Label" parent="canvas/game_ui/margin_container/labels_container"]
margin_top = 54.0
margin_right = 135.0
margin_bottom = 68.0
text = "TIME: 0s"

[node name="tile_map" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( -589834, 6, 0, -589833, 6, 0, -589832, 6, 0, -589831, 6, 0, -589830, 6, 0, -589829, 6, 0, -589828, 6, 0, -589827, 6, 0, -589826, 6, 0, -589825, 8, 65547, -655360, 10, 786438, -655359, 10, 786439, -655358, 10, 786439, -655357, 10, 786439, -655356, 10, 786439, -655355, 10, 786439, -655354, 10, 786439, -655353, 10, 786439, -655352, 10, 786440, -655351, 8, 65547, -655350, 6, 0, -655349, 6, 0, -655348, 6, 0, -655347, 6, 0, -655346, 6, 0, -655345, 6, 0, -655344, 6, 0, -655343, 6, 0, -655342, 6, 0, -524298, 6, 0, -524297, 6, 0, -524296, 6, 0, -524295, 6, 0, -524294, 6, 0, -524293, 6, 0, -524292, 6, 0, -524291, 6, 0, -524290, 6, 0, -524289, 8, 131083, -589824, 10, 851974, -589823, 10, 524295, -589822, 10, 524295, -589821, 10, 524295, -589820, 10, 524295, -589819, 10, 524295, -589818, 10, 524295, -589817, 10, 524295, -589816, 10, 851976, -589815, 8, 131083, -589814, 6, 0, -589813, 6, 0, -589812, 6, 0, -589811, 6, 0, -589810, 6, 0, -589809, 6, 0, -589808, 6, 0, -589807, 6, 0, -589806, 6, 0, -458762, 6, 0, -458761, 6, 0, -458760, 6, 0, -458759, 6, 0, -458758, 6, 0, -458757, 6, 0, -458756, 6, 0, -458755, 6, 0, -458754, 6, 0, -458753, 8, 131083, -524288, 10, 851974, -524287, 10, 524295, -524286, 10, 524295, -524285, 10, 524295, -524284, 10, 524295, -524283, 10, 524295, -524282, 10, 524295, -524281, 10, 524295, -524280, 10, 851976, -524279, 8, 131083, -524278, 6, 0, -524277, 6, 0, -524276, 6, 0, -524275, 6, 0, -524274, 6, 0, -524273, 6, 0, -524272, 6, 0, -524271, 6, 0, -524270, 6, 0, -393226, 6, 0, -393225, 6, 0, -393224, 6, 0, -393223, 6, 0, -393222, 6, 0, -393221, 6, 0, -393220, 6, 0, -393219, 6, 0, -393218, 6, 0, -393217, 8, 131083, -458752, 10, 851974, -458751, 10, 524295, -458750, 10, 524295, -458749, 10, 524295, -458748, 10, 524295, -458747, 10, 524295, -458746, 10, 524295, -458745, 10, 524295, -458744, 10, 851976, -458743, 8, 131083, -458742, 6, 0, -458741, 6, 0, -458740, 6, 0, -458739, 6, 0, -458738, 6, 0, -458737, 6, 0, -458736, 6, 0, -458735, 6, 0, -458734, 6, 0, -327690, 6, 0, -327689, 6, 0, -327688, 6, 0, -327687, 6, 0, -327686, 6, 0, -327685, 6, 0, -327684, 6, 0, -327683, 6, 0, -327682, 6, 0, -327681, 8, 131083, -393216, 10, 851974, -393215, 10, 524295, -393214, 10, 524295, -393213, 10, 524295, -393212, 10, 524295, -393211, 10, 524295, -393210, 10, 524295, -393209, 10, 524295, -393208, 10, 851976, -393207, 8, 131083, -393206, 6, 0, -393205, 6, 0, -393204, 6, 0, -393203, 6, 0, -393202, 6, 0, -393201, 6, 0, -393200, 6, 0, -393199, 6, 0, -393198, 6, 0, -262154, 6, 0, -262153, 6, 0, -262152, 6, 0, -262151, 6, 0, -262150, 6, 0, -262149, 6, 0, -262148, 6, 0, -262147, 6, 0, -262146, 6, 0, -262145, 8, 131083, -327680, 10, 851974, -327679, 10, 524295, -327678, 10, 524295, -327677, 10, 524295, -327676, 10, 524295, -327675, 10, 524295, -327674, 10, 524295, -327673, 10, 524295, -327672, 10, 851976, -327671, 8, 131083, -327670, 6, 0, -327669, 6, 0, -327668, 6, 0, -327667, 6, 0, -327666, 6, 0, -327665, 6, 0, -327664, 6, 0, -327663, 6, 0, -327662, 6, 0, -196618, 6, 0, -196617, 6, 0, -196616, 6, 0, -196615, 6, 0, -196614, 6, 0, -196613, 6, 0, -196612, 6, 0, -196611, 6, 0, -196610, 6, 0, -196609, 8, 131083, -262144, 10, 851974, -262143, 10, 524295, -262142, 10, 524295, -262141, 10, 524295, -262140, 10, 524295, -262139, 10, 524295, -262138, 10, 524295, -262137, 10, 524295, -262136, 10, 851976, -262135, 8, 131083, -262134, 6, 0, -262133, 6, 0, -262132, 6, 0, -262131, 6, 0, -262130, 6, 0, -262129, 6, 0, -262128, 6, 0, -262127, 6, 0, -262126, 6, 0, -131082, 6, 0, -131081, 6, 0, -131080, 6, 0, -131079, 6, 0, -131078, 6, 0, -131077, 6, 0, -131076, 6, 0, -131075, 6, 0, -131074, 6, 0, -131073, 8, 131083, -196608, 10, 851974, -196607, 10, 524295, -196606, 10, 524295, -196605, 10, 524295, -196604, 10, 524295, -196603, 10, 524295, -196602, 10, 524295, -196601, 10, 524295, -196600, 10, 851976, -196599, 8, 131083, -196598, 6, 0, -196597, 6, 0, -196596, 6, 0, -196595, 6, 0, -196594, 6, 0, -196593, 6, 0, -196592, 6, 0, -196591, 6, 0, -196590, 6, 0, -65546, 6, 0, -65545, 6, 0, -65544, 6, 0, -65543, 6, 0, -65542, 6, 0, -65541, 6, 0, -65540, 6, 0, -65539, 6, 0, -65538, 6, 0, -65537, 8, 131083, -131072, 10, 917510, -131071, 10, 917511, -131070, 10, 917511, -131069, 10, 917511, -131068, 10, 917511, -131067, 10, 917511, -131066, 10, 917511, -131065, 10, 917511, -131064, 10, 917512, -131063, 8, 131083, -131062, 6, 0, -131061, 6, 0, -131060, 6, 0, -131059, 6, 0, -131058, 6, 0, -131057, 6, 0, -131056, 6, 0, -131055, 6, 0, -131054, 6, 0, -10, 8, 262152, -9, 8, 262153, -8, 8, 262153, -7, 8, 262153, -6, 8, 262153, -5, 8, 262153, -4, 8, 262153, -3, 8, 262153, -2, 8, 262153, -1, 8, 196625, -65536, 8, 65545, -65535, 8, 65545, -65534, 8, 65545, -65533, 8, 65545, -65532, 8, 65545, -65531, 8, 65545, -65530, 8, 65545, -65529, 8, 65545, -65528, 8, 65545, -65527, 8, 196626, -65526, 8, 262153, -65525, 8, 262153, -65524, 8, 262153, -65523, 8, 262153, -65522, 8, 262153, -65521, 8, 262153, -65520, 8, 262153, -65519, 8, 262153, -65518, 8, 262154, 65526, 10, 786438, 65527, 10, 786439, 65528, 10, 786439, 65529, 10, 786439, 65530, 10, 786439, 65531, 10, 786439, 65532, 10, 786439, 65533, 10, 786439, 65534, 10, 786440, 65535, 8, 131080, 0, 8, 524293, 1, 8, 524293, 2, 8, 524293, 3, 8, 524293, 4, 8, 524293, 5, 8, 524293, 6, 8, 524293, 7, 8, 524293, 8, 8, 524293, 9, 8, 131082, 10, 10, 786438, 11, 10, 786439, 12, 10, 786439, 13, 10, 786439, 14, 10, 786439, 15, 10, 786439, 16, 10, 786439, 17, 10, 786439, 18, 10, 786440, 131062, 10, 851974, 131063, 10, 524295, 131064, 10, 524295, 131065, 10, 524295, 131066, 10, 524295, 131067, 10, 524295, 131068, 10, 524295, 131069, 10, 524295, 131070, 10, 851976, 131071, 8, 131080, 65536, 8, 524293, 65537, 8, 524293, 65538, 8, 524293, 65539, 8, 131085, 65540, 8, 196617, 65541, 8, 196617, 65542, 8, 131086, 65543, 8, 524293, 65544, 8, 524293, 65545, 8, 131082, 65546, 10, 851974, 65547, 10, 524295, 65548, 10, 524295, 65549, 10, 524295, 65550, 10, 524295, 65551, 10, 524295, 65552, 10, 524295, 65553, 10, 524295, 65554, 10, 851976, 196598, 10, 851974, 196599, 10, 524295, 196600, 10, 524295, 196601, 10, 524295, 196602, 10, 524295, 196603, 10, 524295, 196604, 10, 524295, 196605, 10, 524295, 196606, 10, 851976, 196607, 8, 131080, 131072, 8, 524293, 131073, 8, 131085, 131074, 8, 196617, 131075, 8, 196618, 131076, 0, 0, 131077, 0, 0, 131078, 8, 196616, 131079, 8, 196617, 131080, 8, 131086, 131081, 8, 131082, 131082, 10, 851974, 131083, 10, 524295, 131084, 10, 524295, 131085, 10, 524295, 131086, 10, 524295, 131087, 10, 524295, 131088, 10, 524295, 131089, 10, 524295, 131090, 10, 851976, 262134, 10, 851974, 262135, 10, 524295, 262136, 10, 524295, 262137, 10, 524295, 262138, 10, 524295, 262139, 10, 524295, 262140, 10, 524295, 262141, 10, 524295, 262142, 10, 851976, 262143, 8, 131080, 196608, 8, 524293, 196609, 8, 131082, 196610, 6, 0, 196611, 6, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 8, 131080, 196617, 8, 131082, 196618, 10, 851974, 196619, 10, 524295, 196620, 10, 524295, 196621, 10, 524295, 196622, 10, 524295, 196623, 10, 524295, 196624, 10, 524295, 196625, 10, 524295, 196626, 10, 851976, 327670, 10, 851974, 327671, 10, 524295, 327672, 10, 524295, 327673, 10, 524295, 327674, 10, 524295, 327675, 10, 524295, 327676, 10, 524295, 327677, 10, 524295, 327678, 10, 851976, 327679, 8, 131080, 262144, 8, 524293, 262145, 8, 131082, 262146, 6, 0, 262147, 6, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 8, 131080, 262153, 8, 131082, 262154, 10, 851974, 262155, 10, 524295, 262156, 10, 524295, 262157, 10, 524295, 262158, 10, 524295, 262159, 10, 524295, 262160, 10, 524295, 262161, 10, 524295, 262162, 10, 851976, 393206, 10, 851974, 393207, 10, 524295, 393208, 10, 524295, 393209, 10, 524295, 393210, 10, 524295, 393211, 10, 524295, 393212, 10, 524295, 393213, 10, 524295, 393214, 10, 851976, 393215, 8, 131080, 327680, 8, 524293, 327681, 8, 196621, 327682, 8, 65545, 327683, 8, 65545, 327684, 8, 65545, 327685, 8, 65545, 327686, 8, 65545, 327687, 8, 65545, 327688, 8, 196622, 327689, 8, 131082, 327690, 10, 851974, 327691, 10, 524295, 327692, 10, 524295, 327693, 10, 524295, 327694, 10, 524295, 327695, 10, 524295, 327696, 10, 524295, 327697, 10, 524295, 327698, 10, 851976, 458742, 10, 851974, 458743, 10, 524295, 458744, 10, 524295, 458745, 10, 524295, 458746, 10, 524295, 458747, 10, 524295, 458748, 10, 524295, 458749, 10, 524295, 458750, 10, 851976, 458751, 8, 131080, 393216, 8, 524293, 393217, 8, 524293, 393218, 8, 524293, 393219, 8, 524293, 393220, 8, 524293, 393221, 8, 524293, 393222, 8, 524293, 393223, 8, 524293, 393224, 8, 524293, 393225, 8, 131082, 393226, 10, 851974, 393227, 10, 524295, 393228, 10, 524295, 393229, 10, 524295, 393230, 10, 524295, 393231, 10, 524295, 393232, 10, 524295, 393233, 10, 524295, 393234, 10, 851976, 524278, 10, 917510, 524279, 10, 917511, 524280, 10, 917511, 524281, 10, 917511, 524282, 10, 917511, 524283, 10, 917511, 524284, 10, 917511, 524285, 10, 917511, 524286, 10, 917512, 524287, 8, 131080, 458752, 8, 524293, 458753, 8, 524293, 458754, 8, 524293, 458755, 8, 524293, 458756, 8, 524293, 458757, 8, 524293, 458758, 8, 524293, 458759, 8, 524293, 458760, 8, 524293, 458761, 8, 131082, 458762, 10, 917510, 458763, 10, 917511, 458764, 10, 917511, 458765, 10, 917511, 458766, 10, 917511, 458767, 10, 917511, 458768, 10, 917511, 458769, 10, 917511, 458770, 10, 917512, 589814, 8, 262152, 589815, 8, 262153, 589816, 8, 262153, 589817, 8, 262153, 589818, 8, 262153, 589819, 8, 262153, 589820, 8, 262153, 589821, 8, 262153, 589822, 8, 262153, 589823, 8, 262161, 524288, 8, 196617, 524289, 8, 196617, 524290, 8, 196617, 524291, 8, 196617, 524292, 8, 196617, 524293, 8, 196617, 524294, 8, 196617, 524295, 8, 196617, 524296, 8, 196617, 524297, 8, 262162, 524298, 8, 262153, 524299, 8, 262153, 524300, 8, 262153, 524301, 8, 262153, 524302, 8, 262153, 524303, 8, 262153, 524304, 8, 262153, 524305, 8, 262153, 524306, 8, 262154, 655350, 6, 0, 655351, 6, 0, 655352, 6, 0, 655353, 6, 0, 655354, 6, 0, 655355, 6, 0, 655356, 6, 0, 655357, 6, 0, 655358, 6, 0, 655359, 8, 131083, 589824, 10, 786438, 589825, 10, 786439, 589826, 10, 786439, 589827, 10, 786439, 589828, 10, 786439, 589829, 10, 786439, 589830, 10, 786439, 589831, 10, 786439, 589832, 10, 786440, 589833, 8, 131083, 589834, 6, 0, 589835, 6, 0, 589836, 6, 0, 589837, 6, 0, 589838, 6, 0, 589839, 6, 0, 589840, 6, 0, 589841, 6, 0, 589842, 6, 0, 720886, 6, 0, 720887, 6, 0, 720888, 6, 0, 720889, 6, 0, 720890, 6, 0, 720891, 6, 0, 720892, 6, 0, 720893, 6, 0, 720894, 6, 0, 720895, 8, 131083, 655360, 10, 851974, 655361, 10, 524295, 655362, 10, 524295, 655363, 10, 524295, 655364, 10, 524295, 655365, 10, 524295, 655366, 10, 524295, 655367, 10, 524295, 655368, 10, 851976, 655369, 8, 131083, 655370, 6, 0, 655371, 6, 0, 655372, 6, 0, 655373, 6, 0, 655374, 6, 0, 655375, 6, 0, 655376, 6, 0, 655377, 6, 0, 655378, 6, 0, 786422, 6, 0, 786423, 6, 0, 786424, 6, 0, 786425, 6, 0, 786426, 6, 0, 786427, 6, 0, 786428, 6, 0, 786429, 6, 0, 786430, 6, 0, 786431, 8, 131083, 720896, 10, 851974, 720897, 10, 524295, 720898, 10, 524295, 720899, 10, 524295, 720900, 10, 524295, 720901, 10, 524295, 720902, 10, 524295, 720903, 10, 524295, 720904, 10, 851976, 720905, 8, 131083, 720906, 6, 0, 720907, 6, 0, 720908, 6, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720912, 6, 0, 720913, 6, 0, 720914, 6, 0, 851958, 6, 0, 851959, 6, 0, 851960, 6, 0, 851961, 6, 0, 851962, 6, 0, 851963, 6, 0, 851964, 6, 0, 851965, 6, 0, 851966, 6, 0, 851967, 8, 131083, 786432, 10, 851974, 786433, 10, 524295, 786434, 10, 524295, 786435, 10, 524295, 786436, 10, 524295, 786437, 10, 524295, 786438, 10, 524295, 786439, 10, 524295, 786440, 10, 851976, 786441, 8, 131083, 786442, 6, 0, 786443, 6, 0, 786444, 6, 0, 786445, 6, 0, 786446, 6, 0, 786447, 6, 0, 786448, 6, 0, 786449, 6, 0, 786450, 6, 0, 917494, 6, 0, 917495, 6, 0, 917496, 6, 0, 917497, 6, 0, 917498, 6, 0, 917499, 6, 0, 917500, 6, 0, 917501, 6, 0, 917502, 6, 0, 917503, 8, 131083, 851968, 10, 851974, 851969, 10, 524295, 851970, 10, 524295, 851971, 10, 524295, 851972, 10, 524295, 851973, 10, 524295, 851974, 10, 524295, 851975, 10, 524295, 851976, 10, 851976, 851977, 8, 131083, 851978, 6, 0, 851979, 6, 0, 851980, 6, 0, 851981, 6, 0, 851982, 6, 0, 851983, 6, 0, 851984, 6, 0, 851985, 6, 0, 851986, 6, 0, 983030, 6, 0, 983031, 6, 0, 983032, 6, 0, 983033, 6, 0, 983034, 6, 0, 983035, 6, 0, 983036, 6, 0, 983037, 6, 0, 983038, 6, 0, 983039, 8, 131083, 917504, 10, 851974, 917505, 10, 524295, 917506, 10, 524295, 917507, 10, 524295, 917508, 10, 524295, 917509, 10, 524295, 917510, 10, 524295, 917511, 10, 524295, 917512, 10, 851976, 917513, 8, 131083, 917514, 6, 0, 917515, 6, 0, 917516, 6, 0, 917517, 6, 0, 917518, 6, 0, 917519, 6, 0, 917520, 6, 0, 917521, 6, 0, 917522, 6, 0, 1048566, 6, 0, 1048567, 6, 0, 1048568, 6, 0, 1048569, 6, 0, 1048570, 6, 0, 1048571, 6, 0, 1048572, 6, 0, 1048573, 6, 0, 1048574, 6, 0, 1048575, 8, 131083, 983040, 10, 851974, 983041, 10, 524295, 983042, 10, 524295, 983043, 10, 524295, 983044, 10, 524295, 983045, 10, 524295, 983046, 10, 524295, 983047, 10, 524295, 983048, 10, 851976, 983049, 8, 131083, 983050, 6, 0, 983051, 6, 0, 983052, 6, 0, 983053, 6, 0, 983054, 6, 0, 983055, 6, 0, 983056, 6, 0, 983057, 6, 0, 983058, 6, 0, 1114102, 6, 0, 1114103, 6, 0, 1114104, 6, 0, 1114105, 6, 0, 1114106, 6, 0, 1114107, 6, 0, 1114108, 6, 0, 1114109, 6, 0, 1114110, 6, 0, 1114111, 8, 131083, 1048576, 10, 851974, 1048577, 10, 524295, 1048578, 10, 524295, 1048579, 10, 524295, 1048580, 10, 524295, 1048581, 10, 524295, 1048582, 10, 524295, 1048583, 10, 524295, 1048584, 10, 851976, 1048585, 8, 131083, 1048586, 6, 0, 1048587, 6, 0, 1048588, 6, 0, 1048589, 6, 0, 1048590, 6, 0, 1048591, 6, 0, 1048592, 6, 0, 1048593, 6, 0, 1048594, 6, 0, 1179638, 6, 0, 1179639, 6, 0, 1179640, 6, 0, 1179641, 6, 0, 1179642, 6, 0, 1179643, 6, 0, 1179644, 6, 0, 1179645, 6, 0, 1179646, 6, 0, 1179647, 8, 196619, 1114112, 10, 917510, 1114113, 10, 917511, 1114114, 10, 917511, 1114115, 10, 917511, 1114116, 10, 917511, 1114117, 10, 917511, 1114118, 10, 917511, 1114119, 10, 917511, 1114120, 10, 917512, 1114121, 8, 196619, 1114122, 6, 0, 1114123, 6, 0, 1114124, 6, 0, 1114125, 6, 0, 1114126, 6, 0, 1114127, 6, 0, 1114128, 6, 0, 1114129, 6, 0, 1114130, 6, 0 )

[node name="harvester" parent="." instance=ExtResource( 2 )]
position = Vector2( 183, 252 )
